Editorial: update references to current global object

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <ol class="method-algorithm">
               <li>
                 <p>Let <var>document</var> be the
-                <a data-cite="!HTML/webappapis.html#current-settings-object">
-                current settings object</a>'s
+                <a data-cite="!HTML/webappapis.html#current-principal-settings-object">
+                current principal settings object</a>'s
                 <a data-cite="!HTML/webappapis.html#responsible-document">
                 responsible document</a>.</p>
               </li>
@@ -405,8 +405,8 @@
       <ol>
         <li>
           <p>Let <var>document</var> be the
-          <a data-cite="!HTML/webappapis.html#current-settings-object">
-          current settings object</a>'s
+          <a data-cite="!HTML/webappapis.html#current-principal-settings-object">
+          current principal settings object</a>'s
           <a data-cite="!HTML/webappapis.html#responsible-document">
           responsible document</a>.</p>
         </li>
